--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.graylin.cnns"
-    android:versionCode="24"
-    android:versionName="1.24" >
+    android:versionCode="25"
+    android:versionName="1.25" >
 
     <uses-sdk
         android:minSdkVersion="9"
@@ -46,6 +46,14 @@
             android:name="com.graylin.cnns.NoteActivity"
             android:label="@string/title_activity_note" >
         </activity>
+        <service android:name=".PlayVideoService" />
+        
+        <receiver android:name=".RemoteControlReceive">
+		    <intent-filter>
+		        <action android:name="android.intent.action.MEDIA_BUTTON" />
+		    </intent-filter>
+		</receiver>
+	
     </application>
 
 </manifest>
