--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="libs/htmlcleaner-2.6.1.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="libs/AdBuddiz-2.0.0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
